test/symtabTest/pass/test8.ic
class Parent {
	void testMethod () {
	
	}
}

class Child extends Parent {
	void testMethod () {
	
	}
}

class Grandchild extends Child {
	void testMethod () {
	
	}
}