test/symtabTest/fail/test3.ic
class BadClass extends UndefinedParent {

}

class UndefinedParent {

}